--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name": "application-name",
     "version": "0.0.1",
     "dependencies" : {
-        "request": "*",
-        "cheerio": "*",
-        "underscore.string": "*",
-        "underscore":"*"
+        "request": "2.40.0",
+        "cheerio": "0.17.0",
+        "underscore.string": "2.3.3",
+        "underscore":"1.6.0"
     }
 }
